fix health bar icon alignment

--- a/pet_css.css
+++ b/pet_css.css
@@ -6,6 +6,10 @@
 	width: 60%;
 }
 
+.right.floated.column {
+	margin-right: .75em;
+}
+
 p {
 	text-align: center;
 }
